# word-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: endpoints.py  main.py  settings.py  utils.py
app/wiki/: analyse_words.py  frequent_words.py  search_history.py
tests/: conftest.py  test_api_endpoints.py  test_word_analyser.py
