
[tool.poetry]
name = "word-analysis"
version = "0.1.0"
description = ""
authors = ["parmeshwar <rathodparmeshwar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
nltk = "^3.8.1"
httpx = "^0.26.0"
requests = "^2.31.0"

[tool.black]
target-version = ["py312"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
